[package]
name = "deathball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
egui-macroquad = "0.7.0"
macroquad = "0.3.10"
nalgebra = { version = "0.29.0", features = ["convert-glam014"] }
rapier2d = "0.11.1"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
codegen-units = 1
